{
  "Advanced mode": "Modo avançado",
  "Advanced mode disabled": "Modo avançado desativado",
  "Advanced mode enabled": "Modo avançado ativado",
...
  "Add funds using <emphasis>{{network}}</emphasis> only. Sending assets on any other network will cause irreversible loss of funds.": "Adicione fundos usando <emphasis>{{network}}</emphasis> apenas. Enviar ativos em qualquer outra rede causará perda irreversível de fundos.",
  "Add Funds": "Adicionar fundos",
  "Add funds": "Depositar",
  "Add ~{{amount}} {{symbol}} on {{chain}} for network fees.": "Adicione ~{{amount}} {{symbol}} em {{chain}} para taxas de rede.",
  "Add new beneficiary": "Adicionar novo beneficiário",
  "Address": "Endereço",
  "Address copied!": "Endereço copiado!",
  "Address copied": "Endereço copiado",
  "Address line 2": "Endereço linha 2",
  "All Activity": "Atividade",
...
  "Asset": "Ativo",
  "Assets are added to your balance as collateral to increase your credit limit.": "Os ativos são adicionados ao seu saldo como garantia para aumentar seu limite de crédito.",
  "Assets backing your credit": "Ativos que respaldam seu crédito",
  "Assets from these networks need to be bridged to {{chain}}. Some may also require a swap to a supported asset to generate yield and increase your Exa Card credit limit. You can do both from your Portfolio.": "Os ativos dessas redes precisam de um bridge para {{chain}}. Alguns também podem exigir um swap para um ativo suportado para gerar rendimento e aumentar o limite de crédito do seu Exa Card
  "Assets you can hold, but they can't be used as backing. You can swap or bridge them to supported collateral assets on {{chain}} network to increase your credit limit.": "Ativos que você pode manter, mas que não podem ser usados como garantia. Você pode trocar ou transferi-los para ativos de garantia compatíveis na rede {{chain}} para aumentar seu limite de crédito.",
...
  "Clear": "Limpar",
  "Clear all": "Apagar tudo",
  "Close": "Fechar",
  "Collateral {{value}}": "Garantia {{value}}",
  "Collateral": "Garantia",
...
  "Confirm and receive {{symbol}}": "Confirmar e receber {{symbol}}",
  "Confirm and send": "Confirmar e enviar",
  "Confirm payment": "Confirmar pagamento",
  "Confirm rollover": "Confirmar refinanciamento",
  "Connect to Exactly Protocol to access USDC funding": "Conecte-se ao Exactly Protocol para acessar financiamento em USDC",
  "Connect to LI.FI to swap tokens": "Conecte-se ao LI.FI para trocar tokens",
...
  "Contacts": "Contatos",
  "Continue verification": "Continuar verificação",
  "Continue": "Continuar",
  "Copied!": "Copiado!",
  "Copied": "Copiado",
...
  "Debt to rollover": "Dívida a refinanciar",
  "Debt": "Dívida",
  "DeFi": "DeFi",
  "Delete contact": "Excluir contato",
  "Delivered on {{network}} with different tokens": "Entregue em {{network}} com outros tokens",
...
  "Delivery time: {{details}}": "Prazo de recebimento: {{details}}",
  "Delivery time": "Prazo de recebimento",
  "Deposit": "Depósito",
  "Deposit {{crypto}} via {{network}}": "Depositar {{crypto}} via {{network}}",
  "Deposit {{symbol}} directly to an external wallet": "Deposite {{symbol}} diretamente em uma carteira externa",
...
  "Deposit with PIX": "Depositar com PIX",
  "Details": "Detalhes",
  "Digital assets": "Ativos digitais",
  "Dismiss": "Descartar",
  "Disconnect from {{name}}": "Desconectar de {{name}}",
...
  "Enter business name": "Insira o nome da empresa",
  "Enter city": "Insira a cidade",
  "Enter ENS or wallet address": "Digite um ENS ou endereço de carteira",
  "Enter PIX key": "Insira a chave PIX",
  "Enter receiver address": "Insira o endereço do destinatário",
...
  "Explore decentralized services": "Explorar serviços descentralizados",
  "Explore DeFi": "Explorar DeFi",
  "Explore funding options": "Explorar opções de financiamento",
  "External address on {{chain}}": "Endereço externo na {{chain}}",
  "Failed to copy the transaction hash to the clipboard.": "Erro ao copiar o hash da transação para a área de transferência.",
...
  "Get your Visa Signature Exa Card": "Obtenha seu Exa Card Visa Signature",
  "Getting started": "Primeiros passos",
  "Getting Started": "Primeiros passos",
  "Go back": "Voltar",
  "Go home": "Ir para o início",
...
  "Good evening!": "Boa noite!",
  "Good morning!": "Bom dia!",
  "Got it!": "Entendido!",
  "Help": "Ajuda",
  "Here you’ll find integrations with decentralized services powered by our partners. Exa App never controls your assets or how you use them when connected to the integrations provided by our partners.": "Aqui você encontrará integrações com serviços descentralizados impulsionados pelos nossos parceiros. O Exa App nunca controla seus ativos nem como você os usa quando conectado às integrações dos 
...
  "High swap fee of {{percent}}%. Proceed with caution.": "Taxa de troca alta de {{percent}}%. Prossiga com cautela.",
  "Hold to send {{symbol}}": "Segure para enviar {{symbol}}",
  "Home": "Início",
  "How installment repayment works": "Como funciona o pagamento em parcelas",
  "How much do you want to send?": "Quanto você quer enviar?",
...
  "Make sure the recipient's address supports {{network}} network.": "Verifique se o endereço do destinatário é compatível com a rede {{network}}.",
  "Make your first purchase today!": "Faça sua primeira compra hoje!",
  "Manage portfolio": "Gerenciar portfólio",
  "Manage": "Gerenciar",
  "Manteca provides local virtual account for {{currency}}, converts your transfers to USDC, and sends the funds to Exa App.": "A Manteca fornece uma conta virtual local para {{currency}}, converte suas transferências em USDC e envia os fundos para o Exa App.",
...
  "Network": "Rede",
  "Next due date:": "Próxima data de vencimento:",
  "No activity yet": "Nenhuma atividade ainda",
  "No address found for {{name}}": "Nenhum endereço encontrado para {{name}}",
  "No assets match your filters.": "Nenhum ativo corresponde aos seus filtros.",
...
  "Pay with": "Pagar com",
  "Pay without selling your crypto. Use it as collateral to unlock a credit limit and split purchases into up to {{max}} installments.": "Pague sem vender sua cripto. Use-a como garantia para liberar um limite de crédito e dividir compras em até {{max}} parcelas.",
  "Pay": "Pagar",
  "Payment details": "Detalhes do pagamento",
  "Payment due {{date}}, {{amount}}": "Pagamento com vencimento {{date}}, {{amount}}",
...
  "payment schedule": "agenda de pagamentos",
  "Payment schedule": "Agenda de pagamentos",
  "Payments": "Pagamentos",
  "Penalties {{percent}}": "Juros {{percent}}",
  "Pending proposals": "Solicitações pendentes",
...
  "Please wait...": "Por favor, aguarde...",
  "Portfolio balance": "Saldo do portfólio",
  "Portfolio": "Portfólio",
  "Postal code is required for this country": "O código postal é obrigatório para este país",
  "Pounds": "Libras",
...
  "Processing transfer...": "Processando transferência...",
  "Processing...": "Processando...",
  "Processing": "Processando",
  "Protocol borrow": "Empréstimo do protocolo",
  "Purchase details": "Detalhes da compra",
...
  "Review and confirm": "Revise e confirme",
  "Review and send": "Revise e envie",
  "Review loan terms": "Revisar termos do empréstimo",
  "Review refinance details": "Revisar detalhes do refinanciamento",
  "Review rollover": "Revisar refinanciamento",
  "Review terms": "Revisar termos",
  "Review": "Revisar",
  "Roll over your debt to avoid penalties and gain more time to repay. It’s a smart way to manage your cash flow and possibly reduce your rate.": "Renove sua dívida para evitar penalidades e ganhar mais tempo para pagar. É uma forma inteligente de administrar seu fluxo de caixa e possivelmente reduzir sua taxa.",
  "Rollover failed": "O refinanciamento falhou",
  "Rollover interest": "Juros do refinanciamento",
  "Rollover": "Refinanciar",
  "Routing number": "Número de identificação bancária",
  "Safe from phishing.": "Seguro contra phishing.",
...
  "Select a country": "Selecione um país",
