...
    () => [
      { key: "deposit", title: t("Deposit"), Icon: ArrowDownToLine },
      { key: "send", title: t("Send", { context: "home" }), Icon: ArrowUpRight },
      ...(bytecode
        ? [
            { key: "swap" as const, title: t("Swap", { context: "home" }), Icon: Repeat },
            { key: "borrow" as const, title: t("Borrow", { context: "home" }), Icon: HandCoins },
          ]
        : []),
    ],
    [bytecode, t],
  );
  const [column, setColumn] = useState(0);
...
