appId: ${APP_ID ?? "app.exactly"}
tags: [critical]
---
- launchApp: { clearState: true, permissions: { all: deny, camera: allow } }
- runFlow: ../subflows/hideDevtools.yaml
- tapOn: Sign in
- assertNotVisible: Sign in
- runFlow: ../subflows/dismissNotifications.yaml
- runFlow: ../subflows/getAccount.yaml
- assertVisible: Good (morning|afternoon|evening)!
- runFlow:
    file: ../subflows/mint.yaml
    env: { asset: USDC, to: "${output.account}", amount: "420" }
- runFlow:
    file: ../subflows/send.yaml
    env: { asset: USDC, to: "${output.owner}", amount: "69" }
- tapOn: Manage portfolio
- assertVisible: Assets backing your credit
- tapOn: USDC
- assertVisible: Send to
- runFlow: { file: ../subflows/tapAria.yaml, env: { aria: Back } }
- assertVisible: Assets backing your credit
- runFlow: { file: ../subflows/tapAria.yaml, env: { aria: Back } }
- tapOn: Home
- tapOn: Send
- tapOn: Digital assets
- assertVisible: Send to
- runFlow: { file: ../subflows/tapAria.yaml, env: { aria: Send settings } }
- tapOn: Advanced mode
- tapOn: Close
- tapOn: Enter ENS or wallet address
- inputText: "${output.owner}"
- hideKeyboard
- tapOn: Continue
- assertVisible: Select asset to send
- runFlow: { file: ../subflows/tapAria.yaml, env: { aria: "^EXA on .+$" } }
- runFlow: { file: ../subflows/tapAria.yaml, env: { aria: Back } }
- assertVisible: Select asset to send
- runFlow: { file: ../subflows/tapAria.yaml, env: { aria: Back } }
- assertVisible: Send to
- runFlow: { file: ../subflows/tapAria.yaml, env: { aria: Back } }
- runFlow: { file: ../subflows/tapAria.yaml, env: { aria: Back } }
- tapOn: Home
- runFlow:
    file: ../subflows/mint.yaml
    env: { asset: EXA, to: "${output.account}", amount: "1000" }
- runFlow:
    file: ../subflows/send.yaml
    env: { asset: USDC, to: "${output.owner}", amount: "5", pay: EXA }
- runFlow:
    file: ../subflows/borrow.yaml
    env: { amount: "69", installments: "4" }
- runFlow: ../subflows/rollover.yaml
- runFlow: { file: ../subflows/repay.yaml, env: { amount: "13" } }
- runFlow: ../subflows/repay.yaml
- runFlow:
    file: ../subflows/mint.yaml
    env: { asset: ETH, to: "${output.account}", amount: "0.1" }
- runFlow:
    file: ../subflows/send.yaml
    env: { asset: ETH, to: "${output.owner}", amount: "25", pay: ETH }
- runFlow: ../subflows/assertOnboarding.yaml
- runFlow: ../subflows/verifyIdentity.yaml
- runFlow: ../subflows/assertBenefits.yaml
- runFlow: ../subflows/activateCard.yaml
- runFlow: ../subflows/assertPayments.yaml
- runFlow: ../subflows/assertHome.yaml
- runFlow: ../subflows/storeCoverage.yaml
