appId: ${APP_ID ?? "app.exactly"}
---
- tapOn: Home
- assertVisible: Hi, Test
- runFlow: getAccount.yaml
- runFlow: { file: tapAria.yaml, env: { aria: "Hi, Test" } }
- assertVisible: Address copied
- assertVisible: ${output.account}
- tapOn: Close
- runFlow:
    when: { true: "${maestro.platform != 'web'}" }
    commands: [{ assertVisible: Settings }]
- runFlow:
    when: { platform: web }
    commands: [{ assertVisible: { id: Settings } }]
- runFlow: { file: tapAria.yaml, env: { aria: Hide sensitive } }
- assertVisible: Good (morning|afternoon|evening)!
- runFlow:
    when: { true: "${maestro.platform != 'web'}" }
    commands:
      - assertNotVisible:
          text: \$[\s\d,.\xa0]+
          below: Portfolio
- runFlow:
    when: { platform: web }
    commands:
      - assertNotVisible:
          id: \$[\s\d,.\xa0]+
- runFlow: { file: tapAria.yaml, env: { aria: Show sensitive } }
- assertVisible: Hi, Test
- runFlow:
    when: { true: "${maestro.platform != 'web'}" }
    commands:
      - assertVisible:
          text: \$[\s\d,.\xa0]+
          below: Portfolio
- runFlow:
    when: { platform: web }
    commands:
      - assertVisible:
          id: \$[\s\d,.\xa0]+
- runFlow: readPortfolio.yaml
- assertTrue: ${output.portfolio > 0}
- tapOn: Manage portfolio
- assertVisible: Your Portfolio
- runFlow: { file: tapAria.yaml, env: { aria: Back } }
- assertVisible: Deposit
- assertVisible: Send
- assertVisible: Swap
- assertVisible: Borrow
- assertNotVisible: Getting Started
- runFlow: { file: scrollTo.yaml, env: { element: Upcoming payments, swipes: 1 } }
- runFlow: { file: scrollTo.yaml, env: { element: Latest activity, swipes: 1 } }
- assertNotVisible: No activity yet
- tapOn: View all
- tapOn: Home
- tapOn: Home
- waitForAnimationToEnd
- assertVisible: Portfolio
