appId: ${APP_ID ?? "app.exactly"}
---
- assertTrue: ${amount && !Number.isNaN(Number(amount))}
- assertTrue: ${installments && !Number.isNaN(Number(installments))}
- runFlow: ../subflows/readPortfolio.yaml
- evalScript: ${output.portfolioBefore = output.portfolio}
- tapOn: Borrow
- tapOn: Explore funding options
- assertVisible: Select amount
- runFlow: { file: tapAria.yaml, env: { aria: Amount } }
- inputText: ${amount}
- tapOn: Select Amount # HACK
- tapOn: Continue
- assertVisible: Select your funding installment plan
- tapOn: "${installments + ' installment' + (installments > 1 ? 's' : '') + ' of'}"
- tapOn: Continue
- assertVisible: Select first due date
- tapOn: "^[A-Z][a-z]+ \\d+, \\d{4}$"
- tapOn: Continue
- assertVisible: Your Exa account
- tapOn: Review loan terms
- assertVisible: Review terms
- tapOn: Confirm and receive USDC
- extendedWaitUntil: { visible: Funding request sent, timeout: 180000 }
- runFlow: getAccount.yaml
- runScript:
    file: ../dist/hookProposals.js
    env: { account: '${output.account}' }
- tapOn: Close
- tapOn: Home
- runFlow:
    file: ../subflows/tapWhileAria.yaml
    env: { aria: Pending proposals, tap: Home }
- runFlow: ../subflows/readPortfolio.yaml
- assertTrue: ${output.portfolio - output.portfolioBefore === Number(amount)}
