appId: ${APP_ID ?? "app.exactly"}
---
- waitForAnimationToEnd
- runFlow: { file: scrollTo.yaml, env: { element: "Upcoming payments", offset: 1 } }
- copyTextFrom:
    text: "[A-Z].+"
    below: Upcoming payments
    index: 0
- evalScript: ${output.maturity = maestro.copiedText}
- copyTextFrom:
    text: \$[\d,.]+
    below: Upcoming payments
    index: 0
- evalScript: ${output.debt = Number(maestro.copiedText.slice(1).split(",").join(""))}
- tapOn: { text: "${output.maturity}", below: Upcoming payments }
- waitForAnimationToEnd
- tapOn: Pay
- runFlow:
    when: { true: "${amount}" }
    commands:
      - runFlow:
          when: { platform: android }
          file: ../subflows/longPressAria.yaml
          env: { aria: Repay amount }
      - runFlow:
          when: { true: "${maestro.platform != 'android'}" }
          file: ../subflows/tapAria.yaml
          env: { aria: Repay amount }
      - eraseText
      - inputText: ${amount}
      - tapOn: Subtotal # HACK
- waitForAnimationToEnd
- tapOn: Confirm payment
- assertVisible: Processing.*
- tapOn: Close
- runFlow: getAccount.yaml
- runScript:
    file: ../dist/hookProposals.js
    env: { account: "${output.account}" }
- tapOn: Home
- runFlow:
    file: ../subflows/tapWhileAria.yaml
    env: { aria: Pending proposals, tap: Home }
- waitForAnimationToEnd
- runFlow: { file: scrollTo.yaml, env: { element: "Upcoming payments", offset: 1 } }
- runFlow:
    when: { true: "${!amount}" }
    commands: [{ assertNotVisible: "${output.maturity}" }]
- runFlow:
    when: { true: "${amount}" }
    commands:
      - assertVisible: "${output.maturity}"
      - copyTextFrom:
          text: \$[\d,.]+
          below: Upcoming payments
          index: 0
      - evalScript: ${output.newDebt = Number(maestro.copiedText.slice(1).split(",").join(""))}
      - assertTrue: ${Math.abs(output.debt - output.newDebt - Number(amount)) < 0.02}
- tapOn: Home
- waitForAnimationToEnd
